human_written_tests/WebAssembly/processed_control_flow_validation/test_block_8.wast
(assert_malformed
  (module quote
    "(type $sig (func))"
    "(func (block (type $sig) (result i32) (i32.const 0)) (unreachable))"
  )
  "inline function type"
)